# SpreadsheetJC

./: CMakeLists.txt  Cell.cpp  Cell.h  CellAvg.cpp  CellAvg.h  CellMax.cpp  CellMax.h  CellMin.cpp  CellMin.h  CellSum.cpp  CellSum.h  CellVal.cpp  CellVal.h  Observer.h  SpreadSheet.cpp  SpreadSheet.h  SpreadSheetTest.cpp  Subject.cpp  Subject.h  main.cpp
